--- a/style.css
+++ b/style.css
@@ -49,16 +49,23 @@ body {
 
 .dropdown-menu button {
   background-color: white;
-  width: 130px;
+  
 }
 .dropdown-menu button:hover {
   background-color: white;
+}
+ul.dropdown-menu.dropm.show{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .dropm2 button {
   width: 55px;
 }
-
+.dropdown-item{
+  text-align:center;
+}
 button.dropdown-item.dropm {
   background-color: white;
 }
